--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,8 @@
-body 
-{
+html {
+    background-color: rgb(1, 1, 32);
+}
+
+body {
+    margin: 0;
     background-color: #F8F9FA;
 }
